samples/_failures_safe/1761362143_d6edcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d2d3853.c: In function ‘main’:
./samples/SAFE/__tmp_6d2d3853.c:163:12: error: missing terminating " character
  163 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_6d2d3853.c:163:5: error: expected expression at end of input
  163 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_6d2d3853.c:163:5: error: expected declaration or statement at end of input
